# solonmon_OCR

./: .dockerignore  .gitignore  DESIGN.md  Dockerfile  OCR_LOGSHEET.md  README.md  docker-compose.yml  pyproject.toml
schedule_parser/: __init__.py  d_and_g.py  diagnostics.py  excel_inspector.py  image_enhancement.py  layout_detector.py  ocr_preview_store.py  oil_street.py  openrouter_ocr.py  roster_compare.py  rule_resolver.py  schema.py  time_utils.py  web.py
schedule_parser/static/: parser_app.js  parser_styles.css
schedule_parser/templates/: parser_index.html
tests/: conftest.py  test_d_and_g_parser.py  test_excel_inspector.py  test_image_enhancement.py  test_layout_detector.py  test_oil_street_parser_generated.py  test_oil_street_parser_real_samples.py  test_openrouter_ocr.py  test_roster_compare.py  test_rule_resolver.py  test_web_app.py
