[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solonmon-hr-schedule-parser"
version = "0.1.0"
description = "Deterministic Excel-first Oil Street schedule parser layer."
requires-python = ">=3.11"
dependencies = ["openpyxl>=3.1"]

[project.optional-dependencies]
test = ["pytest>=8"]
web = ["Flask>=3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
